<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="LoginPage">Please sign in</string>
    <string name="Sign_up">New user? Sign Up!</string>
    <string name="Signup">I\'m ready!</string>
    <string name="Sign_in">Sign In</string>
    <string name="Welcome">Weather LB</string>
    <string name="temp">temp</string>
    <string name="city">city</string>
    <string name="date">date</string>
    <string name="desc">desc</string>
    <string name="pno">Phone Number</string>
    <string name="password">Password</string>
    <string name="time">Time</string>
    <string name="Cities">All Cities:</string>
    <string name="Fav">Favourites:</string>
    <string name= "buttons">Lets go</string>
    <string name= "add">Add to Favourites</string>
    <string name= "hello">   Hello! \nNew user</string>


    <string-array name="locate">
        <item>Pune</item>
        <item>Mumbai</item>
        <item>Delhi</item>
        <item>Nagpur</item>
        <item>Banglore</item>
        <item>Nashik</item>
        <item>Nanded</item>
        <item>Chennai</item>
        <item>Gurgaon</item>
        <item>Goa</item>
        <item>Kolkata</item>
        <item>Jaipur</item>
        <item>Hyderabad</item>
    </string-array>
</resources>