<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayLB"
    android:background="@drawable/values">


    <TextView
        android:id="@+id/tdesc"
        android:layout_width="86dp"
        android:layout_height="55dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="160dp"
        android:text="@string/desc"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ttemp"
        android:layout_width="222dp"
        android:layout_height="99dp"
        android:layout_marginTop="236dp"
        android:text="@string/temp"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tcity"
        android:layout_width="82dp"
        android:layout_height="52dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="268dp"
        android:text="@string/city"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tdate"
        android:layout_width="147dp"
        android:layout_height="69dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="592dp"
        android:text="@string/date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgicon"
        android:layout_width="77dp"
        android:layout_height="76dp"
        app:srcCompat="@drawable/weather"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="249dp" />

</androidx.constraintlayout.widget.ConstraintLayout>